--- a/css/questions-and-answers.css
+++ b/css/questions-and-answers.css
@@ -30,7 +30,7 @@ p {
 
 h1{
   /* color: #909090; */
-  color: #00897b;
+  /* color: #00897b; */
 }
 
 h3{
@@ -52,6 +52,10 @@ box-shadow: none;
 padding-bottom: 150px;
 }
 
+.card-pic-format{
+  border: 3px solid #23C086;
+}
+
 .card-format-shadow{
   box-shadow: 0px 39px 61px -15px rgba(0,0,0,0.5);
 }
@@ -63,7 +67,7 @@ padding-bottom: 150px;
     align-items: center;
     width: 100%;
     min-height: 100vh;
-    /* background: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%) !important; */
+    background-color: #eee;
 }
 
 .questions-answers-container{
@@ -96,7 +100,8 @@ padding-bottom: 150px;
     right: 0;
     z-index: 22;
     padding: 0px;
-    margin: 10% 0px 0px 0px;
+    padding: 10% 0px 0px 0px;
+    background-color: #eee;
   }
   
   .me-imgs-icons-bottom span{
@@ -109,9 +114,7 @@ padding-bottom: 150px;
   }
   
   .me-imgs-icons-bottom span i:hover{
-    /* color: #364962; */
-    /* color: #707070; */
-    color: #00897b;
+    color: #23C086;
   }
 
 
